--- a/src/css/modules/Whatshappen/_Whatshappen.scss
+++ b/src/css/modules/Whatshappen/_Whatshappen.scss
@@ -3,13 +3,15 @@ $career-resp-screen: 768px;
 //scss start
 
 #sec-2 {
-    height: 800px;
+    height: 840px;
     @include image('../images/chem-formula-pattern.jpg');
     padding: 60px 0 0 0;
+    bottom-margin: 50px;
 
     .wraper {
-        @include wrapper(90%);
-        padding: 0 10px 50px 10px;
+        width: 90%;
+        margin: 0 auto;
+        padding: 0 10px 20px 10px;
         //border:1px red solid;
 
         .des {
@@ -142,6 +144,7 @@ $career-resp-screen: 768px;
                         box-shadow: 0px 5px 8px $accent-color;
                         background-color: white;
                         box-sizing: border-box;
+
                         h3 {
                             margin: 0px;
                             color: $primary-color;
@@ -153,6 +156,10 @@ $career-resp-screen: 768px;
                             text-align: justify;
                             color: black;
                             font-family: $font-family;
+                            @media only screen and (max-width: 450px) {
+                                padding-top: 14px;
+                                font-size: 17px;
+                            }
                         }
                     }
                 }
